Apply Jahia-specific Tomcat configuration
git-svn-id: svn://localhost/jahia/trunk@4851 69c369ed-ed09-0410-a4a1-e19a46c23626